--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificate Windwing</title>
-    <!-- <style>
+    <style>
         iframe {
             display: none;
         }
-    </style> -->
+    </style>
 </head>
 <body>
 
